# high_kit

./: Makefile  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build.yml
src/basekit/: settings.py  utils.py
src/basekit/infosources/: distribution.py
src/basekit/objects/: globalconfig.py
src/basekit/ops/: filesystem.py  scaffolding.py
src/highkit/: cli.py
src/highkit/ux/: cli.py
src/lowkit/: utils.py
src/lowkit/functions/: helpers.py
